# Graph-Coloring

./: .gitignore  CMakeLists.txt  coloring_best.csv  coloring_dsatur.csv  coloring_smallest_last.csv  main.cpp  readme.md
include/: coloring_problem.h
src/: coloring_problem.cpp
